--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -39,7 +39,7 @@
     "    jupyter notebook --no-browser --port 9999\n",
     "\n",
     "\n",
-    "We use two environments: babyai [ref] and AntMaze [ref].  If you would like to use AntMaze, please [install Mujoco](https://github.com/openai/mujoco-py)."
+    "We use two environments: [BabyAI](https://github.com/mila-iqia/babyai) and [AntMaze](https://github.com/rail-berkeley/d4rl).  If you would like to use AntMaze, please [install Mujoco](https://github.com/openai/mujoco-py)."
    ]
   },
   {
@@ -163,8 +163,8 @@
     "### Providing Demos\n",
     "Use the arrow keys to navigate, Page Up/Down to manipulate objects, and Space to open doors.\n",
     "\n",
-    "## Using Predcollected data\n",
-    "We include a buffer of data collected using 30 mins of human time using Advice.  If you choose this option, ignore the second cell below \n"
+    "## Using Pre-collected data\n",
+    "We include a buffer of data collected using 30 mins of human time using Advice. You can only load this data if you have CUDA enabled. If you choose this option, ignore the second cell below.\n"
    ]
   },
   {
