--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -12,16 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path = [p for p in sys.path if not 'babyai' in p]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +163,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_type = 'BabyAI'  # Options are 'BabyAI', 'Ant'\n",
     "collect_type = 'Precollected'  # Options are 'Advice', 'Demos', or 'Precollected'\n",
     "save_path = 'temp_save_path'  # Any string"
    ]
@@ -186,7 +175,7 @@
    },
    "outputs": [],
    "source": [
-    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
+    "collector = HumanFeedback(collect_type=collect_type, \n",
     "                          save_path=save_path, seed=123)"
    ]
   },
@@ -233,30 +222,6 @@
    "source": [
     "html_str = display_trained_model(env_params.save_path)\n",
     "HTML(html_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib tk\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "\n",
-    "fig = plt.figure(figsize=(20,30))\n",
-    "\n",
-    "def onclick(event):\n",
-    "    ix, iy = event.xdata, event.ydata\n",
-    "    print(ix, iy)\n",
-    "\n",
-    "cid = fig.canvas.mpl_connect('button_press_event', onclick)\n",
-    "\n",
-    "imgplot = plt.imshow(np.random.uniform(size=(10,10)))\n",
-    "plt.show()"
    ]
   },
   {
