--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -220,23 +220,9 @@
    },
    "outputs": [],
    "source": [
-    "html_str = display_trained_model(env_params.save_path)\n",
+    "html_str = display_trained_model(save_path)\n",
     "HTML(html_str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
