--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path = [p for p in sys.path if not 'babyai' in p]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,12 +226,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "html_str = display_trained_model(save_path)\n",
     "HTML(html_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "plot(save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "\n",
+    "def load_data(name, file_name='progress.csv'):\n",
+    "    csv_name = pathlib.Path.cwd().joinpath('logs', name, file_name)\n",
+    "    data = pd.read_csv(csv_name)\n",
+    "    data.columns = [c.strip() for c in data.columns]\n",
+    "    return data\n",
+    "\n",
+    "def plot(run_name, metric='success_rate', x_label='Itrs'):\n",
+    "    use_itrs = x_label in ['Itrs', 'Samples']\n",
+    "    data = load_data(run_name, file_name='results.csv')\n",
+    "    data.columns = ['policy_env','policy','env','success_rate','stoch_accuracy','itr','num_feedback','time','reward']\n",
+    "    y = data[metric].ewm(span=1).mean().to_numpy() \n",
+    "    if use_itrs:\n",
+    "        x = data['itr'].to_numpy()\n",
+    "    else:\n",
+    "        x = data['num_feedback'].to_numpy()\n",
+    "    plt.title(run_name)\n",
+    "    plt.plot(x, y)\n",
+    "    plt.ylabel('Success', fontsize=15)\n",
+    "    plt.xlabel(x_label, fontsize=15)\n",
+    "    plt.show()\n",
+    "    \n",
+    "\n"
    ]
   }
  ],
