final demo update

--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/aliengirlliv/teachable 1> /dev/null"
+    "# !git clone https://github.com/aliengirlliv/teachable 1> /dev/null"
    ]
   },
   {
@@ -65,7 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "cd teachable"
+    "# cd teachable"
    ]
   },
   {
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r reqs.txt 1> /dev/null"
+    "# !pip install -r reqs.txt 1> /dev/null"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd .."
+    "# cd .."
    ]
   },
   {
@@ -127,7 +127,10 @@
    "outputs": [],
    "source": [
     "from final_demo import *\n",
-    "from IPython.display import HTML"
+    "from IPython.display import HTMLimport pathlib\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl"
    ]
   },
   {
@@ -173,8 +176,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_type = 'Precollected'  # Options are 'Advice', 'Demos', or 'Precollected'\n",
-    "save_path = 'temp_save_path'  # Any string"
+    "env_type = 'BabyAI'  # Options are 'BabyAI', 'Ant'\n",
+    "collect_type = 'Advice'  # Options are 'Advice', 'Demos', or 'Precollected'\n",
+    "save_path = 'babyai_10_v0'  # Any string"
    ]
   },
   {
@@ -185,8 +189,8 @@
    },
    "outputs": [],
    "source": [
-    "collector = HumanFeedback(collect_type=collect_type, \n",
-    "                          save_path=save_path, seed=123)"
+    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
+    "                          save_path=save_path, seed=124)"
    ]
   },
   {
@@ -226,7 +230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -237,10 +241,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "\n",
     "plot(save_path)"
    ]
   },
@@ -250,22 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
     "\n",
     "def load_data(name, file_name='progress.csv'):\n",
-    "    csv_name = pathlib.Path.cwd().joinpath('logs', name, file_name)\n",
+    "    csv_name = pathlib.Path.cwd().joinpath('teachable', 'logs', name, file_name)\n",
     "    data = pd.read_csv(csv_name)\n",
     "    data.columns = [c.strip() for c in data.columns]\n",
     "    return data\n",
@@ -274,7 +266,7 @@
     "    use_itrs = x_label in ['Itrs', 'Samples']\n",
     "    data = load_data(run_name, file_name='results.csv')\n",
     "    data.columns = ['policy_env','policy','env','success_rate','stoch_accuracy','itr','num_feedback','time','reward']\n",
-    "    y = data[metric].ewm(span=1).mean().to_numpy() \n",
+    "    y = data[metric].ewm(span=5).mean().to_numpy() \n",
     "    if use_itrs:\n",
     "        x = data['itr'].to_numpy()\n",
     "    else:\n",
@@ -287,11 +279,20 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install seaborn"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
