remove final demo prints

--- a/FinalDemo.ipynb
+++ b/FinalDemo.ipynb
@@ -12,25 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path = [p for p in sys.path if not 'babyai' in p]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!echo $DISPLAY"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "# !git clone https://github.com/aliengirlliv/teachable 1> /dev/null"
+    "!git clone https://github.com/aliengirlliv/teachable 1> /dev/null"
    ]
   },
   {
@@ -74,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "# cd teachable"
+    "cd teachable"
    ]
   },
   {
@@ -88,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install -r reqs.txt 1> /dev/null"
+    "!pip install -r reqs.txt 1> /dev/null"
    ]
   },
   {
@@ -97,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cd .."
+    "cd .."
    ]
   },
   {
@@ -195,40 +176,7 @@
    "source": [
     "env_type = 'Ant'  # Options are 'BabyAI', 'Ant'\n",
     "collect_type = 'Advice'  # Options are 'Advice', 'Demos', or 'Precollected'\n",
-    "save_path = 'whatever2'  # Any string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
-    "                          save_path=save_path, seed=124)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pickle as pkl\n",
-    "# import joblib\n",
-    "# with open('saved_models/babyai_offset_advice/latest.pkl', 'rb') as f:\n",
-    "#     q = joblib.load(f)"
+    "save_path = 'temp3'  # Any string"
    ]
   },
   {
@@ -239,7 +187,8 @@
    },
    "outputs": [],
    "source": [
-    "# env.render('rgb')"
+    "collector = HumanFeedback(env_type=env_type, collect_type=collect_type, \n",
+    "                          save_path=save_path, seed=124)"
    ]
   },
   {
